--- a/.github/workflows/convert-docx.yml
+++ b/.github/workflows/convert-docx.yml
@@ -5,6 +5,9 @@ on:
     paths:
       - '*.docx'  # docx 파일의 변경을 감지
 
+permissions:
+  contents: write  # GITHUB_TOKEN에 쓰기 권한 부여
+
 jobs:
   convert-docx:
     runs-on: ubuntu-latest
@@ -12,6 +15,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v2
