--- a/.github/workflows/convert-docx.yml
+++ b/.github/workflows/convert-docx.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get update
+          sudo apt-get install -y fonts-noto-cjk
           python -m pip install --upgrade pip
           pip install python-docx pillow
 
